--- a/v1.0/index.html
+++ b/v1.0/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
    <link rel="stylesheet" href="css/style.css">
     <title>le concept du garba</title>
-    <style href="css/style.css" ></style>
+    <link rel="stylesheet">
 </head>
 <body>
 
