--- a/v1.2/index.html
+++ b/v1.2/index.html
@@ -56,11 +56,11 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">HISTORIQUE</a>
-                  <a class="nav-link active " href="#">LA CUISINE</a>
-                  <a class="nav-link active" href="#">NUTRITION</a>
-                  <a class="nav-link active" href="#">FABRICATION</a>
-                  <a class="nav-link active" href="#">POURQUOI ?</a>
+                  <a class="nav-link active" aria-current="page" href="#historique">HISTORIQUE</a>
+                  <a class="nav-link active " href="#comment">LA CUISINE</a>
+                  <a class="nav-link active" href="#valeur">NUTRITION</a>
+                  <a class="nav-link active" href="#fab">FABRICATION</a>
+                  <a class="nav-link active" href="#pourquoi">POURQUOI ?</a>
                 </div>
               </div>
             </div>
@@ -116,7 +116,7 @@
                     </div>
            
         </div>
-        <div class="w-100 d-flex justify-content-center mt-3 text-white">
+        <div id="historique" class="w-100 d-flex justify-content-center mt-3 text-white">
         <div class="  mb-5"  style="width: 90%; background: rgba( 255, 255, 255, 0.25 );
         box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
         backdrop-filter: blur( 4px );
@@ -126,7 +126,7 @@
         <div class="w-100 d-flex justify-content-center" style=" border-radius: 10px;
         border: 1px solid rgba( 255, 255, 255, 0.18 ); " >
             <div class="mt-4 p-3" style="width: 90%;">
-                <h2 id="historique">Historique de <strong>l’attiéké</strong> :</h2>
+                <h2 >Historique de <strong>l’attiéké</strong> :</h2>
                     <p><strong>l’attiéké</strong>est un plat régulièrement consommer en cote ivoire et dans l’ouest de l’Afrique es femmes ébriées ne
                     confectionnent pas de la même manière l'attiéké qu'elles vendent, et celui qui est consommé par leur propre ménage.
                     Elles qualifiaient d'adjèkè le produit préparé pour le commerce et la vente, afin de marquer la différence avec le
